spade-tests/src/snapshots/spade_tests__affine_check__unused_field_causes_error.snap
---
source: spade-tests/src/affine_check.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Unused resource
  ┌─ testinput:5:10
  │
5 │ entity x(resource: A) -> bool {
  │          ^^^^^^^^ resource.x is unused
  │
  = note: resource.x is a &mut value which must be set


